--- a/DotnetAngularWebProject.API/Properties/launchSettings.json
+++ b/DotnetAngularWebProject.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WeatherForecast": {
+    "DotnetAngularWebProject": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
