--- a/DotnetAngularWebProject.WeatherForecast/DotnetAngularWebProject.WeatherForecast.csproj
+++ b/DotnetAngularWebProject.WeatherForecast/DotnetAngularWebProject.WeatherForecast.csproj
@@ -2,10 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DotnetAngularWebProject.WeatherForecast.appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetAngularWebProject.Common\DotnetAngularWebProject.Common.csproj" />
   </ItemGroup>
 
 </Project>
