--- a/.editorconfig
+++ b/.editorconfig
@@ -369,7 +369,7 @@ dotnet_diagnostic.CA1843.severity = warning
 dotnet_diagnostic.CA1844.severity = warning
 dotnet_diagnostic.CA1846.severity = warning
 dotnet_diagnostic.CA1847.severity = warning
-dotnet_diagnostic.CA1848.severity = warning
+dotnet_diagnostic.CA1848.severity = none
 dotnet_diagnostic.CA1850.severity = warning
 dotnet_diagnostic.CA1852.severity = warning
 dotnet_diagnostic.CA1853.severity = warning
