refactor: Update API to Host and add Modules namespace

--- a/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
+++ b/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DotnetAngularWebProject.Common\DotnetAngularWebProject.Common.csproj" />
-    <ProjectReference Include="..\DotnetAngularWebProject.WeatherForecast\DotnetAngularWebProject.WeatherForecast.csproj" />
+    <ProjectReference Include="..\DotnetAngularWebProject.Modules.WeatherForecast\DotnetAngularWebProject.Modules.WeatherForecast.csproj" />
   </ItemGroup>
 
 </Project>
