--- a/DotnetAngularWebProject.Modules.WeatherForecast/DotnetAngularWebProject.Modules.WeatherForecast.csproj
+++ b/DotnetAngularWebProject.Modules.WeatherForecast/DotnetAngularWebProject.Modules.WeatherForecast.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="DotnetAngularWebProject.WeatherForecast.appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+    <None Update="DotnetAngularWebProject.Modules.WeatherForecast.appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
