refactor: Update name of Db Connection

--- a/DotnetAngularWebProject.Modules.WeatherForecast/DotnetAngularWebProject.Modules.WeatherForecast.appsettings.Development.json
+++ b/DotnetAngularWebProject.Modules.WeatherForecast/DotnetAngularWebProject.Modules.WeatherForecast.appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "WeatherForecast": "Data Source={FilePath}/DotnetAngularWebProject.WeatherForecast.db"
+    "WeatherForecast": "Data Source={FilePath}/DotnetAngularWebProject.Modules.WeatherForecast.db"
   }
 }
