--- a/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
+++ b/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
@@ -7,6 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>0.1.0</Version>
+    <Copyright>(c) START_YEAR-END_YEAR_OR_PRESENT YOUR_NAME_OR_COMPANY</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
 	  <PrivateAssets>all</PrivateAssets>
