--- a/DotnetAngularWebProject.Modules.Debug/DotnetAngularWebProject.Modules.Debug.csproj
+++ b/DotnetAngularWebProject.Modules.Debug/DotnetAngularWebProject.Modules.Debug.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
 	<Nullable>enable</Nullable>
   </PropertyGroup>
+	
+  <PropertyGroup>
+    <Version>0.1.0</Version>
+    <Copyright>(c) START_YEAR-END_YEAR_OR_PRESENT YOUR_NAME_OR_COMPANY</Copyright>
+  </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
