--- a/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
+++ b/DotnetAngularWebProject.Host/DotnetAngularWebProject.Host.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
