feat: Add Repository and Unit of Work and refactored

--- a/.editorconfig
+++ b/.editorconfig
@@ -283,7 +283,7 @@ dotnet_style_null_propagation = true:warning
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 dotnet_style_prefer_auto_properties = true:warning
 dotnet_style_object_initializer = true:warning
-dotnet_style_prefer_collection_expression = true:warning
+dotnet_style_prefer_collection_expression = when_types_exactly_match:warning
 dotnet_style_collection_initializer = true:warning
 dotnet_style_prefer_simplified_boolean_expressions = true:warning
 dotnet_style_prefer_conditional_expression_over_assignment = true:warning
@@ -343,7 +343,7 @@ dotnet_diagnostic.CA1710.severity = warning
 dotnet_diagnostic.CA1711.severity = warning
 dotnet_diagnostic.CA1712.severity = warning
 dotnet_diagnostic.CA1715.severity = warning
-dotnet_diagnostic.CA1716.severity = warning
+dotnet_diagnostic.CA1716.severity = none
 dotnet_diagnostic.CA1720.severity = warning
 dotnet_diagnostic.CA1725.severity = warning
 dotnet_diagnostic.CA1727.severity = warning
