--- a/DotnetAngularWebProject.Common/DotnetAngularWebProject.Common.csproj
+++ b/DotnetAngularWebProject.Common/DotnetAngularWebProject.Common.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.17" />
     <PackageReference Include="SmartFormat.NET" Version="3.3.2" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
